# eve-tournaments

./: README.md  app.py  config.dist  nohup.out  pyproject.toml  requirements.txt
migrations/versions/: 6482a3250a82_.py  f39c1f83daaa_.py
templates/: base.html  demo.html  tournament.html
